Qt metrics v0.15: Bug fixes and coding improvements
Project dashboard: Corrected a case where Autotest section didn't
list the failed tests correctly (case when only one to list).

Filter box: Corrected layout problem where certain IE and Mozilla
versions showed the selection boxes like 'stairs'.

Coding style improvements: Replaced database column constants with
variables as they may change in different queries. Created a function
for creating build number string for the build links (instead of using
same piece of code in several files).

--- a/non-puppet/qtmetrics/styles.css
+++ b/non-puppet/qtmetrics/styles.css
@@ -182,11 +182,12 @@ body {
     display:block;
     width: 90px;
     float:left;
-    padding-top: 5px;
+    margin-top: 4px;                       /* This can be used to align the filter title vertically against the selection box */
 }
 
 #filterFields select {                       /* This can be used to set all filter fields with same width */
     width: 400px;
+    margin-top: 3px;
 }
 
 button {
